--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
 		<title>Testing</title>
+		<link href="styles.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		<h1>Hello world</h1>
 		<canvas id="canvas"></canvas>
 		<script src="main.js"></script>
 	</body>
